Fix alignment of media preview label

--- a/components/com_jce/editor/tiny_mce/plugins/media/css/content.less
+++ b/components/com_jce/editor/tiny_mce/plugins/media/css/content.less
@@ -149,6 +149,9 @@ img.mce-object {
         z-index: 1;
         box-sizing: border-box;
         pointer-events: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     audio {
@@ -172,7 +175,6 @@ img.mce-object {
     &.mce-object-audio::after {
         font-size: 0.75em;
         line-height: 1;
-        top: calc(50% - 0.5em);
     }
 }
 
